# secbeat

./: .dockerignore  .env.example  .gitignore  BEHAVIORAL_TESTING.md  CHANGELOG.md  CHAPTER_2.3_OBSERVABILITY.md  CHAPTER_2.4_SYN_FLOOD.md  CHAPTER_3.1_WASM_RUNTIME.md  CHAPTER_3.3_DYNAMIC_WASM_RULES.md  CHAPTER_4.1_DISTRIBUTED_STATE.md  CHAPTER_4.2_DASHBOARD.md  CONTAINERIZED_TESTS.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_UPDATES.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_SUMMARY.md  ITERATION_1_SUMMARY.md  ITERATION_2_SUMMARY.md  KERNEL_OPERATIONS.md  Makefile  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PHASE6_README.md  PHASE7_README.md  PLATFORM.md  PLATFORM_ANALYSIS.md  PRODUCTION_HARDENING_SUMMARY.md  QUICKSTART.md  README.md  RESOURCE_OPTIMIZED_CONFIG.md  (+44 more)
.github/: CI_CD.md
.github/workflows/: deploy-docs.yml  fuzzing.yml  test.yml
config/: staging.toml
dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: StatCard.tsx
dashboard/src/pages/: Attacks.tsx  Dashboard.tsx  Nodes.tsx
dashboard/src/types/: api.ts
deployment/: CHECKLIST.md  DEPLOYMENT_GUIDE.md  README-terraform.md  README.md  STATUS_SUMMARY.md  VM_ALLOCATION_PLAN.md  deploy-hybrid.sh  deploy.sh  proxmox-config.yml
deployment/ansible/: inventory.ini  site.yml
deployment/ansible/templates/: docker-compose.yml.j2  haproxy.cfg.j2  mitigation-node.service.j2  nats.conf.j2  nats.service.j2  nginx.conf.j2  orchestrator.service.j2  prometheus.yml.j2
deployment/scripts/: deploy-proxmox.sh  test-proxmox.sh
deployment/terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  check-proxmox-templates.sh  cloud-init.yml.tpl  fix-template-issue.sh  inventory-simple.ini.tpl  inventory.ini.tpl  main-simple.tf  main.tf  setup-template.sh  setup-ubuntu22-cloud-template.sh  setup-ubuntu22-template.sh  terraform.tfvars  terraform.tfvars.example  test-proxmox-auth.sh  validate-deployment.sh
docker/: prometheus.yml
docs/: api.html  deployment.html  index.html  platform.html  quickstart.html
docs/adr/: 001-nats-over-grpc.md
docs/css/: docs.css  style.css
docs/js/: main.js
mitigation-node/: Cargo.toml  FUZZING_RESULTS.md  README.md  audit_wasm_memory.sh  test-crdt.sh  test_comprehensive.sh  test_suite.sh
mitigation-node/config/: default.toml  l7.toml  phase1.toml  phase2.toml  super-minimal.toml  syn.toml  tcp-minimal.toml  tcp.toml
mitigation-node/fuzz/: Cargo.toml
mitigation-node/fuzz/fuzz_targets/: fuzz_syn_cookie_generation.rs  fuzz_syn_cookie_validation.rs
mitigation-node/src/: bpf_loader.rs  config.rs  ddos.rs  error.rs  events.rs  lib.rs  main.rs  main_new.rs  management.rs  orchestrator.rs  secret.rs  syn_proxy.rs  tcp_proxy.rs  test_origin.rs  waf.rs
mitigation-node/src/distributed/: crdt.rs  mod.rs  state_sync.rs
mitigation-node/src/wasm/: abi.rs  engine.rs  mod.rs
mitigation-node/tests/: integration_tests.rs  performance_tests.rs  unit_tests.rs  wasm_memory_leak_tests.rs  wasm_tests.rs
orchestrator-node/: Cargo.toml
orchestrator-node/src/: lib.rs  main.rs  rule_gen.rs  types.rs
orchestrator-node/src/experts/: anomaly_ml.rs  behavioral.rs  features.rs  ml_async.rs  mod.rs  resource_manager.rs  threat_intel.rs
reports/: dependency-tree.txt
secbeat-common/: Cargo.toml
secbeat-common/src/: lib.rs
secbeat-ebpf/: Cargo.toml
secbeat-ebpf/src/: cookie.rs  csum.rs  main.rs
systemd/: nats.service  secbeat-mitigation.service  secbeat-orchestrator.service
tests/: e2e_scenarios.rs  setup_env.sh
tests/mock-origin/: Dockerfile  nginx.conf
wasm-rules/: quick-test.sh
wasm-rules/bad-bot/: Cargo.toml  build.sh
wasm-rules/bad-bot/src/: lib.rs
wasm-rules/test-runner/: Cargo.toml  deploy-and-test.sh
wasm-rules/test-runner/src/: main.rs
wasm-rules/universal-waf/: Cargo.toml  test.sh
wasm-rules/universal-waf/src/: lib.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/components/: BentoGrid.astro  TrafficHud.tsx
website/src/content/docs/: index.mdx  installation.md  quickstart.md
website/src/content/docs/core/: observability.md  overview.md  syn-flood.md
website/src/content/docs/enterprise/: dashboard.md  distributed-state.md  multi-region.md
website/src/content/docs/intelligence/: dynamic-rules.md  hot-reload.md  wasm-runtime.md
website/src/content/docs/kernel/: performance.md  xdp.md
website/src/content/docs/reference/: api.md  cli.md  config.md
website/src/pages/: test.astro
website/src/styles/: global.css
