[workspace]
members = [
    "mitigation-node",
    "orchestrator-node",
    "secbeat-common"
]
exclude = ["wasm-rules/*", "mitigation-node/fuzz", "secbeat-ebpf"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"

# Networking
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "http1", "http2"] }
http-body-util = "0.1"
hyper-rustls = "0.27"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-service = "0.3"

# TLS and security
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Network utilities
socket2 = "0.5"
ipnet = "2.9"

# Rate limiting and protection
governor = "0.6"
dashmap = "5.5"

# Raw packet processing for SYN proxy
pnet = "0.34"

# Cryptography
rand = "0.8"
sha2 = "0.10"

# Data structures
lru = "0.12"

# NATS messaging
async-nats = "0.33"
tokio-stream = "0.1"

# Machine Learning
linfa = "0.7"
linfa-linear = "0.7"
ndarray = "0.15"

# Regular expressions
regex = "1.10"

# HTTP parsing
httparse = "1.8"

# Performance optimizations
arc-swap = "1.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
