[package]
name = "mitigation-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance TCP proxy for DDoS mitigation and traffic scrubbing"

[[bin]]
name = "mitigation-node"
path = "src/main.rs"

[[bin]]
name = "test-origin"
path = "src/test_origin.rs"

[dependencies]
# Async runtime with multi-threaded scheduler
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Networking utilities
socket2 = "0.5"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework for management API
axum = "0.7"

# HTTP parsing and WAF capabilities
httparse = "1.8"
regex = "1.10"

# Rate limiting and DDoS protection
governor = "0.6"
dashmap = "5.5"

# IP address handling
ipnet = "2.9"

# Configuration management
config = "0.14"
toml = "0.8"

# Additional async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Phase 2: Raw packet handling for SYN Proxy
pnet = "0.34"

# SYN Cookie cryptographic operations
rand = "0.8"
sha2 = "0.10"

# Connection tracking for established connections
lru = "0.12"

# Phase 3: L7 TLS/HTTP Proxy
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
tower = { version = "0.4", features = ["make"] }
tower-service = "0.3"

# Phase 4: Orchestrator integration
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Phase 5: NATS messaging for real-time control
async-nats = "0.33"
tokio-stream = "0.1"

[profile.release]
# Optimize for performance in production
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true
