[package]
name = "mitigation-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance TCP proxy for DDoS mitigation and traffic scrubbing"

[[bin]]
name = "mitigation-node"
path = "src/main.rs"

[[bin]]
name = "test-origin"
path = "src/test_origin.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
httparse = { workspace = true }
regex = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
ipnet = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
pnet = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
lru = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
tokio-stream = { workspace = true }

[features]
default = ["syn_proxy", "tls", "orchestrator", "events"]
syn_proxy = []
tls = []
orchestrator = []
events = []

[profile.release]
# Optimize for performance in production
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true
