[package]
name = "mitigation-node"
version = "0.1.0"
edition = "2021"
authors = ["Fabrizio Salmi <fabrizio.salmi@gmail.com>"]
description = "High-performance TCP proxy for DDoS mitigation and traffic scrubbing"

[[bin]]
name = "mitigation-node"
path = "src/main.rs"

[[bin]]
name = "test-origin"
path = "src/test_origin.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
socket2 = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
axum = { workspace = true }
httparse = { workspace = true }

# eBPF/XDP support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
secbeat-common = { path = "../secbeat-common", features = ["user"] }

# WASM Runtime for hot-reloadable WAF rules
wasmtime = "26.0"

regex = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
ipnet = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
pnet = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
lru = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
tokio-stream = { workspace = true }

# Common types (secbeat-common without eBPF on macOS)
[target.'cfg(not(target_os = "linux"))'.dependencies]
secbeat-common = { path = "../secbeat-common", default-features = false }

[features]
default = ["syn_proxy", "tls", "orchestrator", "events"]
syn_proxy = []
tls = []
orchestrator = []
events = []

[dev-dependencies]
# Testing dependencies
tempfile = "3.8"
tokio-test = "0.4"
