[package]
name = "orchestrator-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Central orchestrator for SecBeat mitigation node fleet management"

[dependencies]
# Async runtime with multi-threaded scheduler
tokio = { version = "1.0", features = ["full"] }

# Web framework for REST API
axum = "0.7"

# Thread-safe concurrent data structures
dashmap = "5.5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation for node IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Machine Learning for predictive scaling
linfa = "0.6"
linfa-linear = "0.6"
ndarray = "0.15"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for external calls
reqwest = { version = "0.11", features = ["json"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration management
config = "0.14"
toml = "0.8"

# Additional async utilities
futures = "0.3"

# HTTP server utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Phase 5: NATS messaging for real-time control
async-nats = "0.33"
tokio-stream = "0.1"

[profile.release]
# Optimize for performance in production
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true
