[package]
name = "orchestrator-node"
version = "0.1.0"
edition = "2021"
authors = ["Fabrizio Salmi <fabrizio.salmi@gmail.com>"]
description = "Central orchestrator for SecBeat mitigation node fleet management"

[lib]
name = "orchestrator_node"
path = "src/lib.rs"

[[bin]]
name = "orchestrator-node"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
linfa = { workspace = true }
linfa-linear = { workspace = true }
ndarray = { workspace = true }

# Machine Learning for Anomaly Detection
smartcore = { version = "0.3", features = ["serde"] }

chrono = { workspace = true }
reqwest = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
tokio-stream = { workspace = true }
