[package]
name = "bad-bot-rule"
version = "0.1.0"
edition = "2021"

[workspace]
# This is a standalone package, not part of the parent workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
