[package]
name = "universal-waf"
version = "0.1.0"
edition = "2021"

[workspace]
# Standalone package (not part of main workspace)

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.10", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary
